src/main/default/objects/Contact/fields/ProductsOwned__c.field-meta.xml
<CustomField>
    <fullName>ProductsOwned__c</fullName>
    <label>ProductsOwned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>