src/main/default/objects/Contact/fields/RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationDate__c</fullName>
    <label>RegistrationDate</label>
    <type>Date</type>
</CustomField>