src/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>new-customer</fullName>
            </value>
            <value>
                <fullName>sales-rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>